feat: move selection to sql
